<resources>
    <string name="app_name">校园百事通</string>
    <string name="app_homepage">http://www.wandoujia.com/apps/com.xybst.activity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_article_content">新闻与通知</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_course_detail">课程详情</string>

    <string name="action_about">关于</string>
    <string name="action_logout">登出</string>
    <string name="action_search">搜索</string>

    <string name="news">新闻与通知</string>
    <string name="inquiry">成绩查询</string>
    <string name="timetable">课程表</string>
    <string name="favorite">收藏</string>
    <string name="login">登录</string>
    <string name="about">关于</string>
    <string name="not_login">未登录</string>

    <string name="logout_success">注销成功</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_grade_push">成绩推送</string>
    <string name="pref_description_grade_push">新成绩出现后系统将自动推送给您</string>

    <string name="pref_title_current_week">设置当前周</string>
    <string-array name="pref_current_week_titles">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
        <item>第21周</item>
        <item>第22周</item>
        <item>第23周</item>
        <item>第24周</item>
        <item>第25周</item>
    </string-array>
    <string-array name="pref_current_week_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_check_update">检查更新</string>
    <string name="pref_title_clean_data">清除缓存</string>
    <string name="action_settings">Settings</string>

</resources>
