<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_grade_push"
        android:summary="@string/pref_description_grade_push"
        android:title="@string/pref_title_grade_push" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_current_week_titles"
        android:entryValues="@array/pref_current_week_values"
        android:key="current_week"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_current_week" />

<!--    <Preference
        android:title="更换主题"
        android:key="change_theme"/>-->

    <Preference
        android:title="@string/pref_title_check_update"
        android:key="check_for_update"/>

    <Preference
        android:title="@string/pref_title_clean_data"
        android:key="clean_data"/>

</PreferenceScreen>
